--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
   <groupId>com.noctarius.discovery</groupId>
   <artifactId>hazelcast-kubernetes-discovery</artifactId>
-  <version>0.9.3</version>
+  <version>0.9.4-SNAPSHOT</version>
   <name>Kubernetes Discovery Plugin for Hazelcast</name>
   <description>Kubernetes Service Discovery for Hazelcast Discovery SPI</description>
   <url>http://github.com/noctarius/hazelcast-kubernetes-discovery</url>
@@ -51,7 +51,7 @@
     <connection>scm:git:git://github.com/noctarius/hazelcast-kubernetes-discovery.git</connection>
     <developerConnection>scm:git:git@github.com:noctarius/hazelcast-kubernetes-discovery.git</developerConnection>
     <url>https://github.com/noctarius/hazelcast-kubernetes-discovery/</url>
-    <tag>hazelcast-kubernetes-discovery-0.9.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
