--- a/hazelcast/pom.xml
+++ b/hazelcast/pom.xml
@@ -319,7 +319,7 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client-protocol</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>${client.protocol.version}</version>
             <scope>compile</scope>
         </dependency>
 
