--- a/hazelcast/src/test/resources/log4j.properties
+++ b/hazelcast/src/test/resources/log4j.properties
@@ -25,6 +25,7 @@ log4j.logger.com.hazelcast.cluster=debug
 log4j.logger.com.hazelcast.internal.cluster=debug
 log4j.logger.com.hazelcast.internal.partition=debug
 log4j.logger.com.hazelcast.spi.hotrestart=info
+log4j.logger.com.hazelcast.spi.hotrestart.cluster=debug
 log4j.logger.com.hazelcast.test.mocknetwork=debug
 
 log4j.rootLogger=info, stdout
