--- a/hazelcast-jet-core-old/pom.xml
+++ b/hazelcast-jet-core-old/pom.xml
@@ -17,7 +17,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>hazelcast-jet</name>
+    <name>hazelcast-jet-core-old</name>
     <artifactId>hazelcast-jet-core-old</artifactId>
     <packaging>jar</packaging>
     <version>0.3-SNAPSHOT</version>
