--- a/hazelcast-jet-cascading/pom.xml
+++ b/hazelcast-jet-cascading/pom.xml
@@ -32,6 +32,7 @@
         <cascading.version>3.1.0</cascading.version>
         <hadoop.version>2.7.2</hadoop.version>
         <main.basedir>${project.parent.basedir}</main.basedir>
+        <skipTests>true</skipTests>
     </properties>
 
     <repositories>
