--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <name>hazelcast-aws</name>
     <groupId>com.hazelcast</groupId>
     <artifactId>hazelcast-aws</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
     <description>Hazelcast In-Memory DataGrid Aws Plugin</description>
     <url>http://www.hazelcast.com/</url>
