--- a/hazelcast/src/test/resources/log4j.properties
+++ b/hazelcast/src/test/resources/log4j.properties
@@ -20,12 +20,4 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p |%X{test-name}| - [%c{1}] %t - %m%n
 
-log4j.logger.com.hazelcast.instance=debug
-log4j.logger.com.hazelcast.cluster=debug
-log4j.logger.com.hazelcast.internal.cluster=debug
-log4j.logger.com.hazelcast.internal.partition=debug
-log4j.logger.com.hazelcast.spi.hotrestart=info
-log4j.logger.com.hazelcast.spi.hotrestart.cluster=debug
-log4j.logger.com.hazelcast.test.mocknetwork=debug
-
-log4j.rootLogger=info, stdout
+log4j.rootLogger=warn, stdout
