Introduced eventual consistency for member/client maps and client caches

--- a/hazelcast-client/src/test/resources/log4j.properties
+++ b/hazelcast-client/src/test/resources/log4j.properties
@@ -28,4 +28,10 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p |%X{test-name}| 
 #log4j.logger.com.hazelcast.nio=info
 #log4j.logger.com.hazelcast.hibernate=debug
 
+#log4j.logger.com.hazelcast.internal.nearcache.impl.invalidation=trace
+#log4j.logger.com.hazelcast.client.map.impl.nearcache.invalidation=trace
+#log4j.logger.com.hazelcast.client.cache.impl.nearcache.invalidation=trace
+#log4j.logger.com.hazelcast.cache.impl=trace
+
+
 log4j.rootLogger=info, stdout
