--- a/hazelcast-jet-core/pom.xml
+++ b/hazelcast-jet-core/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
-            <scope>provided</scope>
+            <version>${hazelcast.version}</version>
         </dependency>
 
         <!--TEST DEPENDENCIES-->
