--- a/hazelcast/pom.xml
+++ b/hazelcast/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-root</artifactId>
-        <version>3.8-SNAPSHOT</version>
+        <version>3.8-EA2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
