sonatype release repository added to root pom to decrease the release period of client protocol

--- a/pom.xml
+++ b/pom.xml
@@ -943,6 +943,11 @@
             <name>Maven2 Snapshot Repository</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+        <repository>
+            <id>sonatype-release-repository</id>
+            <name>Sonatype Release Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
