--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,13 @@
 
         <!-- test dependencies -->
         <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <scope>test</scope>
+            <version>${hazelcast.version}</version>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -252,7 +259,9 @@
                         -Dhazelcast.logging.type=log4j
                         -Dhazelcast.test.use.network=false
                     </argLine>
-
+                    <excludedGroups>
+                        com.hazelcast.test.annotation.SlowTest,com.hazelcast.test.annotation.NightlyTest
+                    </excludedGroups>
                 </configuration>
             </plugin>
             <plugin>
