Allow parameterized values for boolean fields in Spring config Fix #8500

--- a/hazelcast-spring/src/test/resources/hazelcast-default.properties
+++ b/hazelcast-spring/src/test/resources/hazelcast-default.properties
@@ -22,3 +22,5 @@ boolean.false false
 boolean.true true
 backup.count=6
 native.memory.size=64
+testMap.hotRestart.enabled=true
+testMap.hotRestart.fsync=true
