--- a/hazelcast-all/pom.xml
+++ b/hazelcast-all/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-root</artifactId>
-        <version>3.7.5-SNAPSHOT</version>
+        <version>3.7.5</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
