--- a/pom.xml
+++ b/pom.xml
@@ -947,6 +947,11 @@
             <id>backup-repo</id>
             <url>http://repo2.maven.org/maven2/</url>
         </repository>
+        <repository>
+            <id>release-repository</id>
+            <name>release repository</name>
+            <url>https://oss.sonatype.org/content/repositories/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
