--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <description>An Azure DiscoveryStrategy for Hazelcast</description>
     <groupId>com.hazelcast</groupId>
     <artifactId>hazelcast-azure</artifactId>
-    <version>1.2.1</version>
+    <version>1.2.2-SNAPSHOT</version>
     <url>http://www.hazelcast.com/</url>
     <packaging>jar</packaging>
 
