Set autorelease to true

--- a/pom.xml
+++ b/pom.xml
@@ -412,7 +412,7 @@
             <configuration>
               <serverId>release-repository</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>false</autoReleaseAfterClose>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
             </configuration>
           </plugin>
         </plugins>
