Fixed Windows issue in JCacheDetectorTest (see https://issues.apache.org/jira/browse/LOG4J2-1461)

--- a/hazelcast-client/src/test/resources/log4j.properties
+++ b/hazelcast-client/src/test/resources/log4j.properties
@@ -33,5 +33,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p |%X{test-name}| 
 #log4j.logger.com.hazelcast.client.cache.impl.nearcache.invalidation=trace
 #log4j.logger.com.hazelcast.cache.impl=trace
 
-
 log4j.rootLogger=info, stdout
+log4j.skipJansi=true
