--- a/hazelcast/src/test/resources/log4j.properties
+++ b/hazelcast/src/test/resources/log4j.properties
@@ -29,6 +29,7 @@ log4j.logger.com.hazelcast.spi.hotrestart.cluster=debug
 log4j.logger.com.hazelcast.test.mocknetwork=debug
 
 log4j.rootLogger=info, stdout
+log4j.skipJansi=true
 
 # WARNING: This config file is no longer used in Hazelcast tests
 # Use log4j2.xml to configure test logging
